# jam

./: .gitmodules
2026/: .dir-locals.el  Cargo.toml  Makefile  README.org  flake.nix  game.html  index.html
2026/examples/godot/project/: export_presets.cfg  hello.tscn  icon.svg.import  main.gd  main.gd.uid  project.godot
2026/examples/js/: index.html
2026/examples/raylib/: .envrc  .gitignore  build.sh  build_raylib.sh  main.c
2026/examples/raylib/.direnv/: flake-profile-1-link
2026/examples/raylib/nix/: flake.nix
2026/examples/teleia/: .dir-locals.el  Cargo.toml  Makefile  index.html
2026/examples/teleia/src/: game.rs
2026/framing/: .gitignore  Cargo.toml  Makefile  index.css  index.html
2026/framing/art/: mrworld.aseprite  music.org
2026/framing/src/: assets.rs  game.rs  lib.rs
2026/games/bytomancer/: index.html  index.pck
2026/games/mrrobust/: index.html  index.pck
2026/src/: main.rs
